--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -1,4 +1,67 @@
 ﻿l_english:
- KOR_japanese_authoritarianism_ADJ:0 "Korean"
- KOR_japanese_authoritarianism_DEF:0 "The Japanese Korea"
- KOR_japanese_authoritarianism:0 "Japanese Korea"
+ AEF_syn_syndicalism_ADJ:0 "Central African"
+ AEF_syn_syndicalism_DEF:0 "The French Equatorial Africa"
+ AEF_syn_syndicalism:0 "French Equatorial Africa"
+ AFN_syn_syndicalism_ADJ:0 "North African"
+ AFN_syn_syndicalism_DEF:0 "The French North Africa"
+ AFN_syn_syndicalism:0 "French North Africa"
+ ANG_por_authoritarianism_ADJ:0 "Angolan"
+ ANG_por_authoritarianism_DEF:0 "The Province of Angola"
+ ANG_por_authoritarianism:0 "Province of Angola"
+ AOF_syn_syndicalism_ADJ:0 "West African"
+ AOF_syn_syndicalism_DEF:0 "The French West Africa"
+ AOF_syn_syndicalism:0 "French West Africa"
+ BWA_bri_conservatism_ADJ:0 "West African"
+ BWA_bri_conservatism_DEF:0 "The British West Africa"
+ BWA_bri_conservatism:0 "British West Africa"
+ COG_bel_corporatism_ADJ:0 "Congolese"
+ COG_bel_corporatism_DEF:0 "The Belgian Congo"
+ COG_bel_corporatism:0 "Belgian Congo"
+ EST_com_communism_ADJ:0 "Estonian"
+ EST_com_communism_DEF:0 "The ETK"
+ EST_com_communism:0 "ETK"
+ ETH_ita_authoritarianism_ADJ:0 "East African"
+ ETH_ita_authoritarianism_DEF:0 "The Italian East Africa"
+ ETH_ita_authoritarianism:0 "Italian East Africa"
+ FIN_com_communism_ADJ:0 "Finnish"
+ FIN_com_communism_DEF:0 "The Finnish Socialist Workers' Republic"
+ FIN_com_communism:0 "Finnish Socialist Workers' Republic"
+ GER_com_communism_ADJ:0 "German"
+ GER_com_communism_DEF:0 "The German Socialist Republic"
+ GER_com_communism:0 "German Socialist Republic"
+ INS_hol_nazism_ADJ:0 "Dutch-Indonesian"
+ INS_hol_nazism_DEF:0 "The Dutch East Indies"
+ INS_hol_nazism:0 "Dutch East Indies"
+ KEN_bri_conservatism_ADJ:0 "East African"
+ KEN_bri_conservatism_DEF:0 "The British East Africa"
+ KEN_bri_conservatism:0 "British East Africa"
+ KOR_jap_authoritarianism_ADJ:0 "Korean"
+ KOR_jap_authoritarianism_DEF:0 "The Japanese Korea"
+ KOR_jap_authoritarianism:0 "Japanese Korea"
+ LAT_com_communism_ADJ:0 "Latvian"
+ LAT_com_communism_DEF:0 "The Latvian SSR"
+ LAT_com_communism:0 "Latvian SSR"
+ LBA_ita_corporatism_ADJ:0 "Libyan"
+ LBA_ita_corporatism_DEF:0 "The Italian North Africa"
+ LBA_ita_corporatism:0 "Italian North Africa"
+ LIT_com_communism_ADJ:0 "Lithuanian"
+ LIT_com_communism_DEF:0 "The Lithuanian SSR"
+ LIT_com_communism:0 "Lithuanian SSR"
+ MAL_bri_conservatism_ADJ:0 "Malaysian"
+ MAL_bri_conservatism_DEF:0 "The British Malaya"
+ MAL_bri_conservatism:0 "British Malaya"
+ MZB_por_authoritarianism_ADJ:0 "Mozambican"
+ MZB_por_authoritarianism_DEF:0 "The Portuguese East Africa"
+ MZB_por_authoritarianism:0 "Portuguese East Africa"
+ RAJ_bri_conservatism_ADJ:0 "Indian"
+ RAJ_bri_conservatism_DEF:0 "The British Raj"
+ RAJ_bri_conservatism:0 "British Raj"
+ SYR_syn_syndicalism_ADJ:0 "Syrian"
+ SYR_syn_syndicalism_DEF:0 "The French Syria"
+ SYR_syn_syndicalism:0 "French Syria"
+ VIN_syn_syndicalism_ADJ:0 "Indochinese"
+ VIN_syn_syndicalism_DEF:0 "The Indochinese Union"
+ VIN_syn_syndicalism:0 "Indochinese Union"
+ ZIM_bri_conservatism_ADJ:0 "Central African"
+ ZIM_bri_conservatism_DEF:0 "The Central African Federation"
+ ZIM_bri_conservatism:0 "Central African Federation"
