--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -29,6 +29,9 @@
  GER_com_communism_ADJ:0 "German"
  GER_com_communism_DEF:0 "The German Socialist Republic"
  GER_com_communism:0 "German Socialist Republic"
+ HUN_com_communism_ADJ:0 "Hungarian"
+ HUN_com_communism_DEF:0 "The Hungarian Soviet Republic"
+ HUN_com_communism:0 "Hungarian Soviet Republic"
  INS_hol_nazism_ADJ:0 "Dutch-Indonesian"
  INS_hol_nazism_DEF:0 "The Dutch East Indies"
  INS_hol_nazism:0 "Dutch East Indies"
