--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -230,8 +230,8 @@
  AUS_corporatism_DEF:0 "The Austria"
  AUS_corporatism:0 "Austria"
  AUS_nazism_ADJ:0 "Austrian"
- AUS_nazism_DEF:0 "The Austria"
- AUS_nazism:0 "Austria"
+ AUS_nazism_DEF:0 "The Greater Austria"
+ AUS_nazism:0 "Greater Austria"
  #########################################
  #########################################
  BEL_communism_ADJ:0 "Belgian"
@@ -256,8 +256,8 @@
  BEL_corporatism_DEF:0 "The Belgium"
  BEL_corporatism:0 "Belgium"
  BEL_nazism_ADJ:0 "Belgian"
- BEL_nazism_DEF:0 "The Belgium"
- BEL_nazism:0 "Belgium"
+ BEL_nazism_DEF:0 "The Rexist Belgium"
+ BEL_nazism:0 "Rexist Belgium"
  #########################################
  #########################################
  BHU_communism_ADJ:0 "Bhutanese"
@@ -417,29 +417,29 @@
  #########################################
  #########################################
  CHI_communism_ADJ:0 "Chinese"
- CHI_communism_DEF:0 "The China"
- CHI_communism:0 "China"
+ CHI_communism_DEF:0 "The Chinese People's State"
+ CHI_communism:0 "Chinese People's State"
  CHI_syndicalism_ADJ:0 "Chinese"
- CHI_syndicalism_DEF:0 "The China"
- CHI_syndicalism:0 "China"
+ CHI_syndicalism_DEF:0 "The Chinese People's State"
+ CHI_syndicalism:0 "Chinese People's State"
  CHI_social_democracy_ADJ:0 "Chinese"
- CHI_social_democracy_DEF:0 "The China"
- CHI_social_democracy:0 "China"
+ CHI_social_democracy_DEF:0 "The Chinese People's State"
+ CHI_social_democracy:0 "Chinese People's State"
  CHI_liberalism_ADJ:0 "Chinese"
- CHI_liberalism_DEF:0 "The China"
- CHI_liberalism:0 "China"
+ CHI_liberalism_DEF:0 "The Chinese People's State"
+ CHI_liberalism:0 "Chinese People's State"
  CHI_conservatism_ADJ:0 "Chinese"
- CHI_conservatism_DEF:0 "The China"
- CHI_conservatism:0 "China"
+ CHI_conservatism_DEF:0 "The Chinese People's State"
+ CHI_conservatism:0 "Chinese People's State"
  CHI_authoritarianism_ADJ:0 "Chinese"
- CHI_authoritarianism_DEF:0 "The China"
- CHI_authoritarianism:0 "China"
+ CHI_authoritarianism_DEF:0 "The Chinese People's State"
+ CHI_authoritarianism:0 "Chinese People's State"
  CHI_corporatism_ADJ:0 "Chinese"
- CHI_corporatism_DEF:0 "The China"
- CHI_corporatism:0 "China"
+ CHI_corporatism_DEF:0 "The Chinese People's State"
+ CHI_corporatism:0 "Chinese People's State"
  CHI_nazism_ADJ:0 "Chinese"
- CHI_nazism_DEF:0 "The China"
- CHI_nazism:0 "China"
+ CHI_nazism_DEF:0 "The Chinese People's State"
+ CHI_nazism:0 "Chinese People's State"
  #########################################
  #########################################
  CHL_communism_ADJ:0 "Chilean"
@@ -539,8 +539,8 @@
  CRO_authoritarianism_DEF:0 "The Croatia"
  CRO_authoritarianism:0 "Croatia"
  CRO_corporatism_ADJ:0 "Croatian"
- CRO_corporatism_DEF:0 "The Croatia"
- CRO_corporatism:0 "Croatia"
+ CRO_corporatism_DEF:0 "The Greater Croatia"
+ CRO_corporatism:0 "Greater Croatia"
  CRO_nazism_ADJ:0 "Croatian"
  CRO_nazism_DEF:0 "The Croatia"
  CRO_nazism:0 "Croatia"
@@ -553,19 +553,19 @@
  CUB_syndicalism_DEF:0 "The Central America"
  CUB_syndicalism:0 "Central America"
  CUB_social_democracy_ADJ:0 "Central American"
- CUB_social_democracy_DEF:0 "The Central America"
- CUB_social_democracy:0 "Central America"
+ CUB_social_democracy_DEF:0 "The Federation of Central America"
+ CUB_social_democracy:0 "Federation of Central America"
  CUB_liberalism_ADJ:0 "Central American"
- CUB_liberalism_DEF:0 "The Central America"
- CUB_liberalism:0 "Central America"
+ CUB_liberalism_DEF:0 "The Federation of Central America"
+ CUB_liberalism:0 "Federation of Central America"
  CUB_conservatism_ADJ:0 "Central American"
- CUB_conservatism_DEF:0 "The Central America"
- CUB_conservatism:0 "Central America"
+ CUB_conservatism_DEF:0 "The Federation of Central America"
+ CUB_conservatism:0 "Federation of Central America"
  CUB_authoritarianism_ADJ:0 "Central American"
- CUB_authoritarianism_DEF:0 "The Central America"
- CUB_authoritarianism:0 "Central America"
- CUB_corporatism_ADJ:0 "Central American"
- CUB_corporatism_DEF:0 "The Central America"
+ CUB_authoritarianism_DEF:0 "The Federation of Central America"
+ CUB_authoritarianism:0 "Federation of Central America"
+ CUB_corporatism_ADJ:0 "Federation of Central American"
+ CUB_corporatism_DEF:0 "The Federation of Central America"
  CUB_corporatism:0 "Central America"
  CUB_nazism_ADJ:0 "Central American"
  CUB_nazism_DEF:0 "The Central America"
@@ -784,8 +784,8 @@
  FRA_communism_DEF:0 "The France"
  FRA_communism:0 "France"
  FRA_syndicalism_ADJ:0 "French"
- FRA_syndicalism_DEF:0 "The France"
- FRA_syndicalism:0 "France"
+ FRA_syndicalism_DEF:0 "The United French Syndicates"
+ FRA_syndicalism:0 "United French Syndicates"
  FRA_social_democracy_ADJ:0 "French"
  FRA_social_democracy_DEF:0 "The France"
  FRA_social_democracy:0 "France"
@@ -880,8 +880,8 @@
  HOL_corporatism_DEF:0 "The Netherlands"
  HOL_corporatism:0 "Netherlands"
  HOL_nazism_ADJ:0 "Dutch"
- HOL_nazism_DEF:0 "The Netherlands"
- HOL_nazism:0 "Netherlands"
+ HOL_nazism_DEF:0 "The Dutchland"
+ HOL_nazism:0 "Dutchland"
  #########################################
  #########################################
  HUN_communism_ADJ:0 "Hungarian"
@@ -943,23 +943,23 @@
  IRE_syndicalism_DEF:0 "The Ireland"
  IRE_syndicalism:0 "Ireland"
  IRE_social_democracy_ADJ:0 "Irish"
- IRE_social_democracy_DEF:0 "The Ireland"
- IRE_social_democracy:0 "Ireland"
+ IRE_social_democracy_DEF:0 "The Irish Free State"
+ IRE_social_democracy:0 "Irish Free State"
  IRE_liberalism_ADJ:0 "Irish"
- IRE_liberalism_DEF:0 "The Ireland"
- IRE_liberalism:0 "Ireland"
+ IRE_liberalism_DEF:0 "The Irish Free State"
+ IRE_liberalism:0 "Irish Free State"
  IRE_conservatism_ADJ:0 "Irish"
- IRE_conservatism_DEF:0 "The Ireland"
- IRE_conservatism:0 "Ireland"
+ IRE_conservatism_DEF:0 "The Irish Free State"
+ IRE_conservatism:0 "Irish Free State"
  IRE_authoritarianism_ADJ:0 "Irish"
- IRE_authoritarianism_DEF:0 "The Ireland"
- IRE_authoritarianism:0 "Ireland"
+ IRE_authoritarianism_DEF:0 "The Irish Free State"
+ IRE_authoritarianism:0 "Irish Free State"
  IRE_corporatism_ADJ:0 "Irish"
- IRE_corporatism_DEF:0 "The Ireland"
- IRE_corporatism:0 "Ireland"
+ IRE_corporatism_DEF:0 "The Irish Free State"
+ IRE_corporatism:0 "Irish Free State"
  IRE_nazism_ADJ:0 "Irish"
- IRE_nazism_DEF:0 "The Ireland"
- IRE_nazism:0 "Ireland"
+ IRE_nazism_DEF:0 "The Irish Free State"
+ IRE_nazism:0 "Irish Free State"
  #########################################
  #########################################
  IRQ_communism_ADJ:0 "Iraqi"
@@ -1018,8 +1018,8 @@
  ITA_communism_DEF:0 "The Italy"
  ITA_communism:0 "Italy"
  ITA_syndicalism_ADJ:0 "Italian"
- ITA_syndicalism_DEF:0 "The Italy"
- ITA_syndicalism:0 "Italy"
+ ITA_syndicalism_DEF:0 "The Italian Union"
+ ITA_syndicalism:0 "Italian Union"
  ITA_social_democracy_ADJ:0 "Italian"
  ITA_social_democracy_DEF:0 "The Italy"
  ITA_social_democracy:0 "Italy"
@@ -1171,8 +1171,8 @@
  #########################################
  #########################################
  LIB_communism_ADJ:0 "Liberian"
- LIB_communism_DEF:0 "The Liberia"
- LIB_communism:0 "Liberia"
+ LIB_communism_DEF:0 "The Liberian Commune"
+ LIB_communism:0 "Liberian Commune"
  LIB_syndicalism_ADJ:0 "Liberian"
  LIB_syndicalism_DEF:0 "The Liberia"
  LIB_syndicalism:0 "Liberia"
@@ -1290,8 +1290,8 @@
  MAN_conservatism_DEF:0 "The Manchuria"
  MAN_conservatism:0 "Manchuria"
  MAN_authoritarianism_ADJ:0 "Chinese"
- MAN_authoritarianism_DEF:0 "The Manchuria"
- MAN_authoritarianism:0 "Manchuria"
+ MAN_authoritarianism_DEF:0 "The Fengtian Clique"
+ MAN_authoritarianism:0 "Fengtian Clique"
  MAN_corporatism_ADJ:0 "Chinese"
  MAN_corporatism_DEF:0 "The Manchuria"
  MAN_corporatism:0 "Manchuria"
@@ -1304,8 +1304,8 @@
  MEX_communism_DEF:0 "The Mexico"
  MEX_communism:0 "Mexico"
  MEX_syndicalism_ADJ:0 "Mexican"
- MEX_syndicalism_DEF:0 "The Mexico"
- MEX_syndicalism:0 "Mexico"
+ MEX_syndicalism_DEF:0 "The CTM"
+ MEX_syndicalism:0 "CTM"
  MEX_social_democracy_ADJ:0 "Mexican"
  MEX_social_democracy_DEF:0 "The Mexico"
  MEX_social_democracy:0 "Mexico"
@@ -1587,8 +1587,8 @@
  #########################################
  #########################################
  PRC_communism_ADJ:0 "Chinese"
- PRC_communism_DEF:0 "The Jiangxi"
- PRC_communism:0 "Jiangxi"
+ PRC_communism_DEF:0 "The Chinese Soviet Republic"
+ PRC_communism:0 "Chinese Soviet Republic"
  PRC_syndicalism_ADJ:0 "Chinese"
  PRC_syndicalism_DEF:0 "The Jiangxi"
  PRC_syndicalism:0 "Jiangxi"
@@ -1769,8 +1769,8 @@
  #########################################
  #########################################
  SOV_communism_ADJ:0 "Russian"
- SOV_communism_DEF:0 "The Russia"
- SOV_communism:0 "Russia"
+ SOV_communism_DEF:0 "The USSR"
+ SOV_communism:0 "USSR"
  SOV_syndicalism_ADJ:0 "Russian"
  SOV_syndicalism_DEF:0 "The Russia"
  SOV_syndicalism:0 "Russia"
