--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -173,8 +173,8 @@
  VICTORY_POINTS_7394:0 "Cork"
  VICTORY_POINTS_6380:0 "Moscow"
  VICTORY_POINTS_525:0 "Kiev"
- VICTORY_POINTS_3529:0 "Tsaritsyn"
- VICTORY_POINTS_3151:0 "Saint Petersburg"
+ VICTORY_POINTS_3529:0 "Trotskygrad"
+ VICTORY_POINTS_3151:0 "Leningrad"
  VICTORY_POINTS_6474:0 "Yuzovka"
  VICTORY_POINTS_9417:0 "Rostov"
  VICTORY_POINTS_11375:0 "Gorki"
@@ -290,7 +290,7 @@
  VICTORY_POINTS_4572:0 "Hsinking"
  VICTORY_POINTS_4052:0 "Pyongyang"
  VICTORY_POINTS_4056:0 "Pusan"
- VICTORY_POINTS_7125:0 "Hanseong"
+ VICTORY_POINTS_7125:0 "Gyeongseong"
  VICTORY_POINTS_7186:0 "Taipei"
  VICTORY_POINTS_10433:0 "Harbin"
  VICTORY_POINTS_11771:0 "Mukden"
@@ -457,7 +457,7 @@
  VICTORY_POINTS_5117:0 "Léopoldville"
  VICTORY_POINTS_5139:0 "Libreville"
  VICTORY_POINTS_8193:0 "Brazzaville"
- VICTORY_POINTS_5210:0 "New Jerusalem"
+ VICTORY_POINTS_5210:0 "Mombasa"
  VICTORY_POINTS_2050:0 "Lagos"
  VICTORY_POINTS_7959:0 "Monrovia"
  VICTORY_POINTS_4948:0 "Dakar"
@@ -578,3 +578,4 @@
  VICTORY_POINTS_10470:0 "Bukhara"
  VICTORY_POINTS_7199:0 "Ruijin"
  VICTORY_POINTS_5037:0 "Mecca"
+ VICTORY_POINTS_12989:0 "New Jerusalem"
