--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -2,6 +2,9 @@
  AEF_syn_syndicalism_ADJ:0 "Central African"
  AEF_syn_syndicalism_DEF:0 "The French Equatorial Africa"
  AEF_syn_syndicalism:0 "French Equatorial Africa"
+ AFN_fra_authoritarianism_ADJ:0 "French African"
+ AFN_fra_authoritarianism_DEF:0 "The French State"
+ AFN_fra_authoritarianism:0 "French State"
  AFN_syn_syndicalism_ADJ:0 "North African"
  AFN_syn_syndicalism_DEF:0 "The French North Africa"
  AFN_syn_syndicalism:0 "French North Africa"
@@ -14,15 +17,15 @@
  BWA_bri_conservatism_ADJ:0 "West African"
  BWA_bri_conservatism_DEF:0 "The British West Africa"
  BWA_bri_conservatism:0 "British West Africa"
- COG_bel_corporatism_ADJ:0 "Congolese"
- COG_bel_corporatism_DEF:0 "The Belgian Congo"
- COG_bel_corporatism:0 "Belgian Congo"
+ COG_bel_conservatism_ADJ:0 "Congolese"
+ COG_bel_conservatism_DEF:0 "The Belgian Congo"
+ COG_bel_conservatism:0 "Belgian Congo"
  EST_com_communism_ADJ:0 "Estonian"
  EST_com_communism_DEF:0 "The ETK"
  EST_com_communism:0 "ETK"
- ETH_ita_authoritarianism_ADJ:0 "East African"
- ETH_ita_authoritarianism_DEF:0 "The Italian East Africa"
- ETH_ita_authoritarianism:0 "Italian East Africa"
+ ETH_ita_corporatism_ADJ:0 "Italian"
+ ETH_ita_corporatism_DEF:0 "The Italian Empire"
+ ETH_ita_corporatism:0 "Italian Empire"
  FIN_com_communism_ADJ:0 "Finnish"
  FIN_com_communism_DEF:0 "The Finnish Socialist Workers' Republic"
  FIN_com_communism:0 "Finnish Socialist Workers' Republic"
@@ -44,9 +47,9 @@
  LAT_com_communism_ADJ:0 "Latvian"
  LAT_com_communism_DEF:0 "The Latvian SSR"
  LAT_com_communism:0 "Latvian SSR"
- LBA_ita_corporatism_ADJ:0 "Libyan"
- LBA_ita_corporatism_DEF:0 "The Italian North Africa"
- LBA_ita_corporatism:0 "Italian North Africa"
+ LBA_syn_syndicalism_ADJ:0 "Libyan"
+ LBA_syn_syndicalism_DEF:0 "The Italian North Africa"
+ LBA_syn_syndicalism:0 "Italian North Africa"
  LIT_com_communism_ADJ:0 "Lithuanian"
  LIT_com_communism_DEF:0 "The Lithuanian SSR"
  LIT_com_communism:0 "Lithuanian SSR"
