--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -230,8 +230,8 @@
  AUS_corporatism_DEF:0 "The Austria"
  AUS_corporatism:0 "Austria"
  AUS_nazism_ADJ:0 "Austrian"
- AUS_nazism_DEF:0 "The Greater Austria"
- AUS_nazism:0 "Greater Austria"
+ AUS_nazism_DEF:0 "The Austria"
+ AUS_nazism:0 "Austria"
  #########################################
  #########################################
  BEL_communism_ADJ:0 "Belgian"
@@ -781,55 +781,55 @@
  #########################################
  #########################################
  FRA_communism_ADJ:0 "French"
- FRA_communism_DEF:0 "The France"
- FRA_communism:0 "France"
+ FRA_communism_DEF:0 "The Cartel France"
+ FRA_communism:0 "Cartel France"
  FRA_syndicalism_ADJ:0 "French"
- FRA_syndicalism_DEF:0 "The United French Syndicates"
- FRA_syndicalism:0 "United French Syndicates"
+ FRA_syndicalism_DEF:0 "The Cartel France"
+ FRA_syndicalism:0 "Cartel France"
  FRA_social_democracy_ADJ:0 "French"
- FRA_social_democracy_DEF:0 "The France"
- FRA_social_democracy:0 "France"
+ FRA_social_democracy_DEF:0 "The Cartel France"
+ FRA_social_democracy:0 "Cartel France"
  FRA_liberalism_ADJ:0 "French"
- FRA_liberalism_DEF:0 "The France"
- FRA_liberalism:0 "France"
+ FRA_liberalism_DEF:0 "The Cartel France"
+ FRA_liberalism:0 "Cartel France"
  FRA_conservatism_ADJ:0 "French"
- FRA_conservatism_DEF:0 "The France"
- FRA_conservatism:0 "France"
+ FRA_conservatism_DEF:0 "The Cartel France"
+ FRA_conservatism:0 "Cartel France"
  FRA_authoritarianism_ADJ:0 "French"
- FRA_authoritarianism_DEF:0 "The France"
- FRA_authoritarianism:0 "France"
+ FRA_authoritarianism_DEF:0 "The Cartel France"
+ FRA_authoritarianism:0 "Cartel France"
  FRA_corporatism_ADJ:0 "French"
- FRA_corporatism_DEF:0 "The France"
- FRA_corporatism:0 "France"
+ FRA_corporatism_DEF:0 "The Cartel France"
+ FRA_corporatism:0 "Cartel France"
  FRA_nazism_ADJ:0 "French"
- FRA_nazism_DEF:0 "The France"
- FRA_nazism:0 "France"
+ FRA_nazism_DEF:0 "The Cartel France"
+ FRA_nazism:0 "Cartel France"
  #########################################
  #########################################
  GER_communism_ADJ:0 "German"
- GER_communism_DEF:0 "The Germany"
- GER_communism:0 "Germany"
+ GER_communism_DEF:0 "The Weimar Republic"
+ GER_communism:0 "Weimar Republic"
  GER_syndicalism_ADJ:0 "German"
- GER_syndicalism_DEF:0 "The Germany"
- GER_syndicalism:0 "Germany"
+ GER_syndicalism_DEF:0 "The Weimar Republic"
+ GER_syndicalism:0 "Weimar Republic"
  GER_social_democracy_ADJ:0 "German"
- GER_social_democracy_DEF:0 "The Germany"
- GER_social_democracy:0 "Germany"
+ GER_social_democracy_DEF:0 "The Weimar Republic"
+ GER_social_democracy:0 "Weimar Republic"
  GER_liberalism_ADJ:0 "German"
- GER_liberalism_DEF:0 "The Germany"
- GER_liberalism:0 "Germany"
+ GER_liberalism_DEF:0 "The Weimar Republic"
+ GER_liberalism:0 "Weimar Republic"
  GER_conservatism_ADJ:0 "German"
- GER_conservatism_DEF:0 "The Germany"
- GER_conservatism:0 "Germany"
+ GER_conservatism_DEF:0 "The Weimar Republic"
+ GER_conservatism:0 "Weimar Republic"
  GER_authoritarianism_ADJ:0 "German"
- GER_authoritarianism_DEF:0 "The Germany"
- GER_authoritarianism:0 "Germany"
+ GER_authoritarianism_DEF:0 "The Weimar Republic"
+ GER_authoritarianism:0 "Weimar Republic"
  GER_corporatism_ADJ:0 "German"
- GER_corporatism_DEF:0 "The Germany"
- GER_corporatism:0 "Germany"
+ GER_corporatism_DEF:0 "The Weimar Republic"
+ GER_corporatism:0 "Weimar Republic"
  GER_nazism_ADJ:0 "German"
- GER_nazism_DEF:0 "The Germany"
- GER_nazism:0 "Germany"
+ GER_nazism_DEF:0 "The Weimar Republic"
+ GER_nazism:0 "Weimar Republic"
  #########################################
  #########################################
  GRE_communism_ADJ:0 "Greek"
@@ -2018,8 +2018,8 @@
  VIN_conservatism_DEF:0 "The Vietnam"
  VIN_conservatism:0 "Vietnam"
  VIN_authoritarianism_ADJ:0 "Vietnamese"
- VIN_authoritarianism_DEF:0 "The Vietnam"
- VIN_authoritarianism:0 "Vietnam"
+ VIN_authoritarianism_DEF:0 "The Empire of Đai Nam"
+ VIN_authoritarianism:0 "Empire of Đai Nam"
  VIN_corporatism_ADJ:0 "Vietnamese"
  VIN_corporatism_DEF:0 "The Vietnam"
  VIN_corporatism:0 "Vietnam"
