--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -579,3 +579,4 @@
  VICTORY_POINTS_7199:0 "Ruijin"
  VICTORY_POINTS_5037:0 "Mecca"
  VICTORY_POINTS_12989:0 "New Jerusalem"
+ VICTORY_POINTS_4379:0 "Huê"
