--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -38,9 +38,9 @@
  INS_hol_nazism_ADJ:0 "Dutch-Indonesian"
  INS_hol_nazism_DEF:0 "The Dutch East Indies"
  INS_hol_nazism:0 "Dutch East Indies"
- KEN_bri_conservatism_ADJ:0 "East African"
- KEN_bri_conservatism_DEF:0 "The British East Africa"
- KEN_bri_conservatism:0 "British East Africa"
+ KEN_bri_conservatism_ADJ:0 "Tanganyikan"
+ KEN_bri_conservatism_DEF:0 "The Tanganyika"
+ KEN_bri_conservatism:0 "Tanganyika"
  KOR_jap_authoritarianism_ADJ:0 "Korean"
  KOR_jap_authoritarianism_DEF:0 "The Japanese Korea"
  KOR_jap_authoritarianism:0 "Japanese Korea"
