--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -1,19 +1,19 @@
 ﻿l_english:
- AEF_com_socialism_ADJ:0 "Central African"
- AEF_com_socialism_DEF:0 "The French Equatorial Africa"
- AEF_com_socialism:0 "French Equatorial Africa"
+ AEF_com_communism_ADJ:0 "Central African"
+ AEF_com_communism_DEF:0 "The French Equatorial Africa"
+ AEF_com_communism:0 "French Equatorial Africa"
  AFN_fra_authoritarianism_ADJ:0 "French"
  AFN_fra_authoritarianism_DEF:0 "The French State"
  AFN_fra_authoritarianism:0 "French State"
- AFN_com_socialism_ADJ:0 "North African"
- AFN_com_socialism_DEF:0 "The French North Africa"
- AFN_com_socialism:0 "French North Africa"
+ AFN_com_communism_ADJ:0 "North African"
+ AFN_com_communism_DEF:0 "The French North Africa"
+ AFN_com_communism:0 "French North Africa"
  ANG_por_authoritarianism_ADJ:0 "Angolan"
  ANG_por_authoritarianism_DEF:0 "The Province of Angola"
  ANG_por_authoritarianism:0 "Province of Angola"
- AOF_com_socialism_ADJ:0 "West African"
- AOF_com_socialism_DEF:0 "The French West Africa"
- AOF_com_socialism:0 "French West Africa"
+ AOF_com_communism_ADJ:0 "West African"
+ AOF_com_communism_DEF:0 "The French West Africa"
+ AOF_com_communism:0 "French West Africa"
  BWA_bri_conservatism_ADJ:0 "West African"
  BWA_bri_conservatism_DEF:0 "The British West Africa"
  BWA_bri_conservatism:0 "British West Africa"
@@ -47,9 +47,9 @@
  LAT_com_communism_ADJ:0 "Latvian"
  LAT_com_communism_DEF:0 "The Latvian SSR"
  LAT_com_communism:0 "Latvian SSR"
- LBA_com_socialism_ADJ:0 "Libyan"
- LBA_com_socialism_DEF:0 "The Italian North Africa"
- LBA_com_socialism:0 "Italian North Africa"
+ LBA_soc_socialism_ADJ:0 "Libyan"
+ LBA_soc_socialism_DEF:0 "The Italian North Africa"
+ LBA_soc_socialism:0 "Italian North Africa"
  LIT_com_communism_ADJ:0 "Lithuanian"
  LIT_com_communism_DEF:0 "The Lithuanian SSR"
  LIT_com_communism:0 "Lithuanian SSR"
@@ -62,12 +62,12 @@
  RAJ_bri_conservatism_ADJ:0 "Indian"
  RAJ_bri_conservatism_DEF:0 "The British Raj"
  RAJ_bri_conservatism:0 "British Raj"
- SYR_com_socialism_ADJ:0 "Syrian"
- SYR_com_socialism_DEF:0 "The French Syria"
- SYR_com_socialism:0 "French Syria"
- VIN_com_socialism_ADJ:0 "Indochinese"
- VIN_com_socialism_DEF:0 "The Indochinese Union"
- VIN_com_socialism:0 "Indochinese Union"
+ SYR_com_communism_ADJ:0 "Syrian"
+ SYR_com_communism_DEF:0 "The French Syria"
+ SYR_com_communism:0 "French Syria"
+ VIN_com_communism_ADJ:0 "Indochinese"
+ VIN_com_communism_DEF:0 "The Indochinese Union"
+ VIN_com_communism:0 "Indochinese Union"
  ZIM_bri_conservatism_ADJ:0 "Central African"
  ZIM_bri_conservatism_DEF:0 "The Central African Federation"
  ZIM_bri_conservatism:0 "Central African Federation"
