--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -781,29 +781,29 @@
  #########################################
  #########################################
  FRA_communism_ADJ:0 "French"
- FRA_communism_DEF:0 "The Cartel France"
- FRA_communism:0 "Cartel France"
+ FRA_communism_DEF:0 "The Communard France"
+ FRA_communism:0 "Communard France"
  FRA_socialism_ADJ:0 "French"
  FRA_socialism_DEF:0 "The Cartel France"
  FRA_socialism:0 "Cartel France"
  FRA_social_democracy_ADJ:0 "French"
- FRA_social_democracy_DEF:0 "The Cartel France"
- FRA_social_democracy:0 "Cartel France"
+ FRA_social_democracy_DEF:0 "The France"
+ FRA_social_democracy:0 "France"
  FRA_liberalism_ADJ:0 "French"
- FRA_liberalism_DEF:0 "The Cartel France"
- FRA_liberalism:0 "Cartel France"
+ FRA_liberalism_DEF:0 "The France"
+ FRA_liberalism:0 "France"
  FRA_conservatism_ADJ:0 "French"
- FRA_conservatism_DEF:0 "The Cartel France"
- FRA_conservatism:0 "Cartel France"
+ FRA_conservatism_DEF:0 "The France"
+ FRA_conservatism:0 "France"
  FRA_authoritarianism_ADJ:0 "French"
- FRA_authoritarianism_DEF:0 "The Cartel France"
- FRA_authoritarianism:0 "Cartel France"
+ FRA_authoritarianism_DEF:0 "The France"
+ FRA_authoritarianism:0 "France"
  FRA_corporatism_ADJ:0 "French"
- FRA_corporatism_DEF:0 "The Cartel France"
- FRA_corporatism:0 "Cartel France"
+ FRA_corporatism_DEF:0 "The France"
+ FRA_corporatism:0 "France"
  FRA_nazism_ADJ:0 "French"
- FRA_nazism_DEF:0 "The Cartel France"
- FRA_nazism:0 "Cartel France"
+ FRA_nazism_DEF:0 "The France"
+ FRA_nazism:0 "France"
  #########################################
  #########################################
  GER_communism_ADJ:0 "German"
