--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -68,6 +68,9 @@
  MZB_por_authoritarianism_ADJ:0 "Mozambican"
  MZB_por_authoritarianism_DEF:0 "The Portuguese East Africa"
  MZB_por_authoritarianism:0 "Portuguese East Africa"
+ POL_wsc_authoritarianism_ADJ:0 "West Slavic"
+ POL_wsc_authoritarianism_DEF:0 "The West Slavic Commonwealth"
+ POL_wsc_authoritarianism:0 "West Slavic Commonwealth"
  PRU_bol_social_democracy_ADJ:0 "Peruvian-Bolivian"
  PRU_bol_social_democracy_DEF:0 "The Peru-Bolivian Confederation"
  PRU_bol_social_democracy:0 "Peru-Bolivian Confederation"
