--- a/localisation/focus_l_english.yml
+++ b/localisation/focus_l_english.yml
@@ -19,3 +19,35 @@
  continuous_restrict_freedom:0 "Suppress Subjects"
  continuous_restrict_freedom_desc:0 "Our colonial subjects have gotten rather silly ideas about things like "self-determination" or "national independence". It is time to disabuse them of these notions."
  unlocks_decision:0 "Unlocks Decision: "
+ war_games:0 "War Games"
+ army_effort:0 "Army Effort"
+ infantry_equipment:0 "Infantry Equipment"
+ special_forces:0 "Special Forces"
+ support_equipment:0 "Support Equipment"
+ artillery_equipment:0 "Artillery Equipment"
+ doctrines:0 "Land Doctrines"
+ mechanization:0 "Mechanization"
+ elite_training:0 "Elite Training"
+ mass_conscription:0 "Mass Conscription"
+ aviation_effort:0 "Aviation Effort"
+ fighter_focus:0 "Fighter Focus"
+ bomber_focus:0 "Bomber Focus"
+ CAS_effort:0 "CAS Effort"
+ NAV_effort:0 "NAV Effort"
+ naval_effort:0 "Naval Effort"
+ submarines:0 "Submarines"
+ destroyers:0 "Destroyers"
+ naval_doctrines:0 "Naval Doctrines"
+ capital_ships:0 "Capital Ships"
+ coastal_defense:0 "Coastal Defense"
+ power_projection:0 "Power Projection"
+ industrial_effort:0 "Industrial Effort"
+ construction_effort:0 "Construction Effort"
+ construction_effort_2:0 "Construction Effort II"
+ construction_effort_3:0 "Construction Effort III"
+ armament_effort:0 "Armament Effort"
+ armament_effort_2:0 "Armament Effort II"
+ armament_effort_3:0 "Armament Effort III"
+ infrastructure_effort:0 "Infrastructure Effort"
+ radar_technology:0 "Radar Technology"
+ advanced_technologies:0 "Advanced Technologies"
