--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -231,8 +231,8 @@
  BEL_liberalism_DEF:0 "The Belgium"
  BEL_liberalism:0 "Belgium"
  BEL_nazism_ADJ:0 "Belgian"
- BEL_nazism_DEF:0 "The Rexist Belgium"
- BEL_nazism:0 "Rexist Belgium"
+ BEL_nazism_DEF:0 "The Belgium"
+ BEL_nazism:0 "Belgium"
  BEL_social_democracy_ADJ:0 "Belgian"
  BEL_social_democracy_DEF:0 "The Belgium"
  BEL_social_democracy:0 "Belgium"
