--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -912,29 +912,29 @@
  ISR_socialism_DEF:0 "The New Judea"
  ISR_socialism:0 "New Judea"
  ITA_authoritarianism_ADJ:0 "Italian"
- ITA_authoritarianism_DEF:0 "The Italy"
- ITA_authoritarianism:0 "Italy"
+ ITA_authoritarianism_DEF:0 "The Italian Republic"
+ ITA_authoritarianism:0 "Italian Republic"
  ITA_communism_ADJ:0 "Italian"
- ITA_communism_DEF:0 "The Italy"
- ITA_communism:0 "Italy"
+ ITA_communism_DEF:0 "The Italian Republic"
+ ITA_communism:0 "Italian Republic"
  ITA_conservatism_ADJ:0 "Italian"
- ITA_conservatism_DEF:0 "The Italy"
- ITA_conservatism:0 "Italy"
+ ITA_conservatism_DEF:0 "The Italian Republic"
+ ITA_conservatism:0 "Italian Republic"
  ITA_fascism_ADJ:0 "Italian"
- ITA_fascism_DEF:0 "The Italy"
- ITA_fascism:0 "Italy"
+ ITA_fascism_DEF:0 "The Italian Republic"
+ ITA_fascism:0 "Italian Republic"
  ITA_liberalism_ADJ:0 "Italian"
- ITA_liberalism_DEF:0 "The Italy"
- ITA_liberalism:0 "Italy"
+ ITA_liberalism_DEF:0 "The Italian Republic"
+ ITA_liberalism:0 "Italian Republic"
  ITA_nazism_ADJ:0 "Italian"
- ITA_nazism_DEF:0 "The Italy"
- ITA_nazism:0 "Italy"
+ ITA_nazism_DEF:0 "The Italian Republic"
+ ITA_nazism:0 "Italian Republic"
  ITA_social_democracy_ADJ:0 "Italian"
- ITA_social_democracy_DEF:0 "The Italy"
- ITA_social_democracy:0 "Italy"
+ ITA_social_democracy_DEF:0 "The Italian Republic"
+ ITA_social_democracy:0 "Italian Republic"
  ITA_socialism_ADJ:0 "Italian"
- ITA_socialism_DEF:0 "The Italian Union"
- ITA_socialism:0 "Italian Union"
+ ITA_socialism_DEF:0 "The Italian Republic"
+ ITA_socialism:0 "Italian Republic"
  JAP_authoritarianism_ADJ:0 "Japanese"
  JAP_authoritarianism_DEF:0 "The Japan"
  JAP_authoritarianism:0 "Japan"
