--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -80,6 +80,9 @@
  MAL_bri_conservatism_ADJ:0 "Malaysian"
  MAL_bri_conservatism_DEF:0 "The British Malaya"
  MAL_bri_conservatism:0 "British Malaya"
+ MON_com_communism_ADJ:0 "Buryat-Mongolian"
+ MON_com_communism_DEF:0 "The Buryat-Mongol ASSR"
+ MON_com_communism:0 "Buryat-Mongol ASSR"
  MZB_por_authoritarianism_ADJ:0 "Mozambican"
  MZB_por_authoritarianism_DEF:0 "The Portuguese East Africa"
  MZB_por_authoritarianism:0 "Portuguese East Africa"
