--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -915,8 +915,8 @@
  ITA_authoritarianism_DEF:0 "The Italian Republic"
  ITA_authoritarianism:0 "Italian Republic"
  ITA_communism_ADJ:0 "Italian"
- ITA_communism_DEF:0 "The Italian Republic"
- ITA_communism:0 "Italian Republic"
+ ITA_communism_DEF:0 "The Italian People's Republic"
+ ITA_communism:0 "Italian People's Republic"
  ITA_conservatism_ADJ:0 "Italian"
  ITA_conservatism_DEF:0 "The Italian Republic"
  ITA_conservatism:0 "Italian Republic"
@@ -933,8 +933,8 @@
  ITA_social_democracy_DEF:0 "The Italian Republic"
  ITA_social_democracy:0 "Italian Republic"
  ITA_socialism_ADJ:0 "Italian"
- ITA_socialism_DEF:0 "The Italian Republic"
- ITA_socialism:0 "Italian Republic"
+ ITA_socialism_DEF:0 "The Italian Socialist Republic"
+ ITA_socialism:0 "Italian Socialist Republic"
  JAP_authoritarianism_ADJ:0 "Japanese"
  JAP_authoritarianism_DEF:0 "The Japan"
  JAP_authoritarianism:0 "Japan"
@@ -2039,3 +2039,27 @@
  BLA_socialism_ADJ:0 "Don-Kuban"
  BLA_socialism_DEF:0 "The Don-Kuban Republic"
  BLA_socialism:0 "Don-Kuban Republic"
+ MON_authoritarianism_ADJ:0 "Buryatian"
+ MON_authoritarianism_DEF:0 "The Buryatia"
+ MON_authoritarianism:0 "Buryatia"
+ MON_communism_ADJ:0 "Buryatian"
+ MON_communism_DEF:0 "The Buryatia"
+ MON_communism:0 "Buryatia"
+ MON_conservatism_ADJ:0 "Buryatian"
+ MON_conservatism_DEF:0 "The Buryatia"
+ MON_conservatism:0 "Buryatia"
+ MON_fascism_ADJ:0 "Buryatian"
+ MON_fascism_DEF:0 "The Buryatia"
+ MON_fascism:0 "Buryatia"
+ MON_liberalism_ADJ:0 "Buryatian"
+ MON_liberalism_DEF:0 "The Buryatia"
+ MON_liberalism:0 "Buryatia"
+ MON_nazism_ADJ:0 "Buryatian"
+ MON_nazism_DEF:0 "The Buryatia"
+ MON_nazism:0 "Buryatia"
+ MON_social_democracy_ADJ:0 "Buryatian"
+ MON_social_democracy_DEF:0 "The Buryatia"
+ MON_social_democracy:0 "Buryatia"
+ MON_socialism_ADJ:0 "Buryatian"
+ MON_socialism_DEF:0 "The Buryatia"
+ MON_socialism:0 "Buryatia"
