--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -583,3 +583,4 @@
  VICTORY_POINTS_11523:0 "Engels"
  VICTORY_POINTS_12333:0 "Ashgabat"
  VICTORY_POINTS_10924:0 "Santa Cruz de la Sierra"
+ VICTORY_POINTS_7816:0 "Ulan-Ude"
