--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -1,13 +1,16 @@
 ﻿l_english:
- AEF_com_communism_ADJ:0 "Central African"
- AEF_com_communism_DEF:0 "The French Equatorial Africa"
- AEF_com_communism:0 "French Equatorial Africa"
+ AEF_fra_social_democracy_ADJ:0 "Central African"
+ AEF_fra_social_democracy_DEF:0 "The French Equatorial Africa"
+ AEF_fra_social_democracy:0 "French Equatorial Africa"
+ AFN_fra_social_democracy_ADJ:0 "North African"
+ AFN_fra_social_democracy_DEF:0 "The French North Africa"
+ AFN_fra_social_democracy:0 "French North Africa"
  ANG_por_authoritarianism_ADJ:0 "Angolan"
  ANG_por_authoritarianism_DEF:0 "The Province of Angola"
  ANG_por_authoritarianism:0 "Province of Angola"
- AOF_com_communism_ADJ:0 "West African"
- AOF_com_communism_DEF:0 "The French West Africa"
- AOF_com_communism:0 "French West Africa"
+ AOF_fra_social_democracy_ADJ:0 "West African"
+ AOF_fra_social_democracy_DEF:0 "The French West Africa"
+ AOF_fra_social_democracy:0 "French West Africa"
  BLA_com_communism_ADJ:0 "Don-Kuban"
  BLA_com_communism_DEF:0 "The Black Sea ASSR"
  BLA_com_communism:0 "Black Sea ASSR"
@@ -47,6 +50,12 @@
  ETH_ita_fascism_ADJ:0 "Italian"
  ETH_ita_fascism_DEF:0 "The Italian Empire"
  ETH_ita_fascism:0 "Italian Empire"
+ FRA_com_communism_ADJ:0 "French"
+ FRA_com_communism_DEF:0 "The Communard France"
+ FRA_com_communism:0 "Communard France"
+ FRA_soc_socialism_ADJ:0 "French"
+ FRA_soc_socialism_DEF:0 "The Cartel France"
+ FRA_soc_socialism:0 "Cartel France"
  FIN_soc_socialism_ADJ:0 "Finnish"
  FIN_soc_socialism_DEF:0 "The Red Finland"
  FIN_soc_socialism:0 "Red Finland"
@@ -54,8 +63,8 @@
  GEO_com_communism_DEF:0 "The Transcaucasian SFSR"
  GEO_com_communism:0 "Transcaucasian SFSR"
  GER_com_communism_ADJ:0 "German"
- GER_com_communism_DEF:0 "The German Socialist Republic"
- GER_com_communism:0 "German Socialist Republic"
+ GER_com_communism_DEF:0 "The German Soviet Republic"
+ GER_com_communism:0 "German Soviet Republic"
  INS_hol_conservatism_ADJ:0 "Dutch-Indonesian"
  INS_hol_conservatism_DEF:0 "The Dutch East Indies"
  INS_hol_conservatism:0 "Dutch East Indies"
@@ -98,9 +107,9 @@
  UKR_com_communism_ADJ:0 "Ukrainian"
  UKR_com_communism_DEF:0 "The Ukrainian SSR"
  UKR_com_communism:0 "Ukrainian SSR"
- VIN_com_communism_ADJ:0 "Indochinese"
- VIN_com_communism_DEF:0 "The Indochinese Union"
- VIN_com_communism:0 "Indochinese Union"
+ VIN_fra_social_democracy_ADJ:0 "Indochinese"
+ VIN_fra_social_democracy_DEF:0 "The Indochinese Federation"
+ VIN_fra_social_democracy:0 "Indochinese Federation"
  ZIM_bri_conservatism_ADJ:0 "Central African"
  ZIM_bri_conservatism_DEF:0 "The Central African Federation"
  ZIM_bri_conservatism:0 "Central African Federation"
