--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -47,15 +47,15 @@
  AFG_socialism_ADJ:0 "Afghan"
  AFG_socialism_DEF:0 "The Afghanistan"
  AFG_socialism:0 "Afghanistan"
- AFN_authoritarianism_ADJ:0 "French"
- AFN_authoritarianism_DEF:0 "The French State"
- AFN_authoritarianism:0 "French State"
- AFN_communism_ADJ:0 "French"
- AFN_communism_DEF:0 "The French State"
- AFN_communism:0 "French State"
- AFN_conservatism_ADJ:0 "French"
- AFN_conservatism_DEF:0 "The French State"
- AFN_conservatism:0 "French State"
+ AFN_authoritarianism_ADJ:0 "Algerian"
+ AFN_authoritarianism_DEF:0 "The Algeria"
+ AFN_authoritarianism:0 "Algeria"
+ AFN_communism_ADJ:0 "Algerian"
+ AFN_communism_DEF:0 "The Algeria"
+ AFN_communism:0 "Algeria"
+ AFN_conservatism_ADJ:0 "Algerian"
+ AFN_conservatism_DEF:0 "The Algeria"
+ AFN_conservatism:0 "Algeria"
  AFN_fascism_ADJ:0 "French"
  AFN_fascism_DEF:0 "The French State"
  AFN_fascism:0 "French State"
@@ -288,29 +288,29 @@
  BOL_socialism_DEF:0 "The Bolivia"
  BOL_socialism:0 "Bolivia"
  BRA_authoritarianism_ADJ:0 "Brazilian"
- BRA_authoritarianism_DEF:0 "The Brazil"
- BRA_authoritarianism:0 "Brazil"
+ BRA_authoritarianism_DEF:0 "The Minas Gerais"
+ BRA_authoritarianism:0 "Minas Gerais"
  BRA_communism_ADJ:0 "Brazilian"
- BRA_communism_DEF:0 "The Brazil"
- BRA_communism:0 "Brazil"
+ BRA_communism_DEF:0 "The Minas Gerais"
+ BRA_communism:0 "Minas Gerais"
  BRA_conservatism_ADJ:0 "Brazilian"
- BRA_conservatism_DEF:0 "The Brazil"
- BRA_conservatism:0 "Brazil"
+ BRA_conservatism_DEF:0 "The Minas Gerais"
+ BRA_conservatism:0 "Minas Gerais"
  BRA_fascism_ADJ:0 "Brazilian"
- BRA_fascism_DEF:0 "The Brazil"
- BRA_fascism:0 "Brazil"
+ BRA_fascism_DEF:0 "The Minas Gerais"
+ BRA_fascism:0 "Minas Gerais"
  BRA_liberalism_ADJ:0 "Brazilian"
- BRA_liberalism_DEF:0 "The Brazil"
- BRA_liberalism:0 "Brazil"
+ BRA_liberalism_DEF:0 "The Minas Gerais"
+ BRA_liberalism:0 "Minas Gerais"
  BRA_nazism_ADJ:0 "Brazilian"
- BRA_nazism_DEF:0 "The Brazil"
- BRA_nazism:0 "Brazil"
+ BRA_nazism_DEF:0 "The Minas Gerais"
+ BRA_nazism:0 "Minas Gerais"
  BRA_social_democracy_ADJ:0 "Brazilian"
- BRA_social_democracy_DEF:0 "The Brazil"
- BRA_social_democracy:0 "Brazil"
+ BRA_social_democracy_DEF:0 "The Minas Gerais"
+ BRA_social_democracy:0 "Minas Gerais"
  BRA_socialism_ADJ:0 "Brazilian"
- BRA_socialism_DEF:0 "The Brazil"
- BRA_socialism:0 "Brazil"
+ BRA_socialism_DEF:0 "The Minas Gerais"
+ BRA_socialism:0 "Minas Gerais"
  BUL_authoritarianism_ADJ:0 "Bulgarian"
  BUL_authoritarianism_DEF:0 "The Bulgaria"
  BUL_authoritarianism:0 "Bulgaria"
@@ -2063,3 +2063,99 @@
  MON_socialism_ADJ:0 "Buryatian"
  MON_socialism_DEF:0 "The Buryatia"
  MON_socialism:0 "Buryatia"
+ SAA_authoritarianism_ADJ:0 "German"
+ SAA_authoritarianism_DEF:0 "The Saar"
+ SAA_authoritarianism:0 "Saar"
+ SAA_communism_ADJ:0 "German"
+ SAA_communism_DEF:0 "The Saar"
+ SAA_communism:0 "Saar"
+ SAA_conservatism_ADJ:0 "German"
+ SAA_conservatism_DEF:0 "The Saar"
+ SAA_conservatism:0 "Saar"
+ SAA_fascism_ADJ:0 "German"
+ SAA_fascism_DEF:0 "The Saar"
+ SAA_fascism:0 "Saar"
+ SAA_liberalism_ADJ:0 "German"
+ SAA_liberalism_DEF:0 "The Saar"
+ SAA_liberalism:0 "Saar"
+ SAA_nazism_ADJ:0 "German"
+ SAA_nazism_DEF:0 "The Saar"
+ SAA_nazism:0 "Saar"
+ SAA_social_democracy_ADJ:0 "German"
+ SAA_social_democracy_DEF:0 "The Saar"
+ SAA_social_democracy:0 "Saar"
+ SAA_socialism_ADJ:0 "German"
+ SAA_socialism_DEF:0 "The Saar"
+ SAA_socialism:0 "Saar"
+ GRA_authoritarianism_ADJ:0 "Brazilian"
+ GRA_authoritarianism_DEF:0 "The Grão-Pará"
+ GRA_authoritarianism:0 "Grão-Pará"
+ GRA_communism_ADJ:0 "Brazilian"
+ GRA_communism_DEF:0 "The Grão-Pará"
+ GRA_communism:0 "Grão-Pará"
+ GRA_conservatism_ADJ:0 "Brazilian"
+ GRA_conservatism_DEF:0 "The Grão-Pará"
+ GRA_conservatism:0 "Grão-Pará"
+ GRA_fascism_ADJ:0 "Brazilian"
+ GRA_fascism_DEF:0 "The Grão-Pará"
+ GRA_fascism:0 "Grão-Pará"
+ GRA_liberalism_ADJ:0 "Brazilian"
+ GRA_liberalism_DEF:0 "The Grão-Pará"
+ GRA_liberalism:0 "Grão-Pará"
+ GRA_nazism_ADJ:0 "Brazilian"
+ GRA_nazism_DEF:0 "The Grão-Pará"
+ GRA_nazism:0 "Grão-Pará"
+ GRA_social_democracy_ADJ:0 "Brazilian"
+ GRA_social_democracy_DEF:0 "The Grão-Pará"
+ GRA_social_democracy:0 "Grão-Pará"
+ GRA_socialism_ADJ:0 "Brazilian"
+ GRA_socialism_DEF:0 "The Grão-Pará"
+ GRA_socialism:0 "Grão-Pará"
+ BAH_authoritarianism_ADJ:0 "Brazilian"
+ BAH_authoritarianism_DEF:0 "The Bahia"
+ BAH_authoritarianism:0 "Bahia"
+ BAH_communism_ADJ:0 "Brazilian"
+ BAH_communism_DEF:0 "The Bahia"
+ BAH_communism:0 "Bahia"
+ BAH_conservatism_ADJ:0 "Brazilian"
+ BAH_conservatism_DEF:0 "The Bahia"
+ BAH_conservatism:0 "Bahia"
+ BAH_fascism_ADJ:0 "Brazilian"
+ BAH_fascism_DEF:0 "The Bahia"
+ BAH_fascism:0 "Bahia"
+ BAH_liberalism_ADJ:0 "Brazilian"
+ BAH_liberalism_DEF:0 "The Bahia"
+ BAH_liberalism:0 "Bahia"
+ BAH_nazism_ADJ:0 "Brazilian"
+ BAH_nazism_DEF:0 "The Bahia"
+ BAH_nazism:0 "Bahia"
+ BAH_social_democracy_ADJ:0 "Brazilian"
+ BAH_social_democracy_DEF:0 "The Bahia"
+ BAH_social_democracy:0 "Bahia"
+ BAH_socialism_ADJ:0 "Brazilian"
+ BAH_socialism_DEF:0 "The Bahia"
+ BAH_socialism:0 "Bahia"
+ SAO_authoritarianism_ADJ:0 "Brazilian"
+ SAO_authoritarianism_DEF:0 "The São Paulo"
+ SAO_authoritarianism:0 "São Paulo"
+ SAO_communism_ADJ:0 "Brazilian"
+ SAO_communism_DEF:0 "The São Paulo"
+ SAO_communism:0 "São Paulo"
+ SAO_conservatism_ADJ:0 "Brazilian"
+ SAO_conservatism_DEF:0 "The São Paulo"
+ SAO_conservatism:0 "São Paulo"
+ SAO_fascism_ADJ:0 "Brazilian"
+ SAO_fascism_DEF:0 "The São Paulo"
+ SAO_fascism:0 "São Paulo"
+ SAO_liberalism_ADJ:0 "Brazilian"
+ SAO_liberalism_DEF:0 "The São Paulo"
+ SAO_liberalism:0 "São Paulo"
+ SAO_nazism_ADJ:0 "Brazilian"
+ SAO_nazism_DEF:0 "The São Paulo"
+ SAO_nazism:0 "São Paulo"
+ SAO_social_democracy_ADJ:0 "Brazilian"
+ SAO_social_democracy_DEF:0 "The São Paulo"
+ SAO_social_democracy:0 "São Paulo"
+ SAO_socialism_ADJ:0 "Brazilian"
+ SAO_socialism_DEF:0 "The São Paulo"
+ SAO_socialism:0 "São Paulo"
