--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -584,3 +584,10 @@
  VICTORY_POINTS_12333:0 "Ashgabat"
  VICTORY_POINTS_10924:0 "Santa Cruz de la Sierra"
  VICTORY_POINTS_7816:0 "Ulan-Ude"
+ VICTORY_POINTS_11531:0 "Saarbrücken"
+ VICTORY_POINTS_10934:0 "Manaós"
+ VICTORY_POINTS_2142:0 "Cuiabá"
+ VICTORY_POINTS_10959:0 "Campo Grande"
+ VICTORY_POINTS_10405:0 "Florianópolis"
+ VICTORY_POINTS_8148:0 "Belo Horizonte"
+ VICTORY_POINTS_5208:0 "Goiânia"
